# btcpp_cdk_wallet

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
.cdk-cli/: cdk-wallet
src/: main.rs
src/sub_commands/: balance.rs  list_proofs.rs  melt.rs  mint.rs  mod.rs  receive.rs  send.rs
